alpm-files/tests/fixtures/parser_errors/wrong_header.snap
---
source: alpm-files/tests/parser_errors.rs
description: "%WRONG%\nusr/\nusr/bin/\nusr/bin/foo\n"
expression: error
---
Parser failed with the following error:
parse error at line 1, column 1
  |
1 | %WRONG%
  | ^
invalid alpm-files section header
expected %FILES%
